--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="bg-image" 
      style="background-image: url('https://mdbootstrap.com/img/Photos/Others/images/76.jpg');
             height: 100vh">
-    <app-cards></app-cards>
+    <app-cards>{{title}}</app-cards>
     <app-form-in></app-form-in>
 </div>
