--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -1,3 +1,5 @@
+
+<!-- Jira Example  -->
 <div class="container text-center">
     <nav class="navbar bg-light" >
         <div class="container-fluid">
@@ -10,14 +12,14 @@
     </nav>
 </div>
 
-
+<!-- Todo, Inprocess, and Done item list  -->
 <div class="container text-center mt-4">
     <div style="background-color: #a6dccc;">
-
         <div cdkDropListGroup>
+
+            <!-- Todo item list element -->
             <div class="example-container">
                 <h2>To do</h2>
-            
                 <div
                     style="background-color: #a6dccc;"
                     cdkDropList
@@ -35,13 +37,12 @@
                             <i class="bi bi-trash3-fill text-primary m-1"></i>
                         </div> 
                     </div>
-                    
                 </div>
             </div>
-        
+
+            <!-- Inprocess item list element -->
             <div class="example-container">
                 <h2>Inprocess</h2>
-            
                 <div
                 style="background-color: #a6dccc;"
                 cdkDropList
@@ -63,6 +64,7 @@
                 </div>
             </div>
         
+            <!-- Done item list element -->
             <div class="example-container">
                 <h2>Done</h2>
             
